--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-    compile 'com.google.firebase:firebase-core:10.0.0'
-    compile 'com.google.firebase:firebase-database:10.0.0'
+    //compile 'com.google.firebase:firebase-core:10.0.0'
+    //compile 'com.google.firebase:firebase-database:10.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
