--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     //compile 'com.google.firebase:firebase-core:10.0.0'
     //compile 'com.google.firebase:firebase-database:10.0.0'
+    compile 'com.android.support:design:25.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
